Final polish: Branding, content, and assets

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -31,7 +31,8 @@
                 <p class="subtitle">A beautiful, minimalist sound meter for your Mac that floats on top of your work.
                 </p>
                 <div class="cta-group">
-                    <a href="#" class="btn-primary" id="download-btn">Download for Mac</a>
+                    <a href="https://github.com/benjscohen/sound_meter/releases/latest/download/Sound.Meter.dmg"
+                        class="btn-primary" id="download-btn">Download for Mac</a>
                     <p class="version-text">v1.0.0 • macOS 12+</p>
                 </div>
             </div>
