Fix landing page links and add site build

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -20,7 +20,8 @@
     <nav>
         <div class="nav-content">
             <div class="logo">Shhh.it</div>
-            <a href="#download" class="btn-sm">Download</a>
+            <a href="https://github.com/benjscohen/sound_meter/releases/latest/download/Sound.Meter.dmg"
+                class="btn-sm">Download</a>
         </div>
     </nav>
 
