--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -20,7 +20,7 @@
     <nav>
         <div class="nav-content">
             <div class="logo">Shhh.it</div>
-            <a href="https://github.com/benjscohen/sound_meter/releases/latest/download/Sound.Meter.dmg"
+            <a href="https://github.com/benjscohen/sound_meter/releases/download/v1.0.0/Sound.Meter-1.0.0-arm64.dmg"
                 class="btn-sm">Download</a>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                 <p class="subtitle">A beautiful, minimalist sound meter for your Mac that floats on top of your work.
                 </p>
                 <div class="cta-group">
-                    <a href="https://github.com/benjscohen/sound_meter/releases/latest/download/Sound.Meter.dmg"
+                    <a href="https://github.com/benjscohen/sound_meter/releases/download/v1.0.0/Sound.Meter-1.0.0-arm64.dmg"
                         class="btn-primary" id="download-btn">Download for Mac</a>
                     <p class="version-text">v1.0.0 • macOS 12+</p>
                 </div>
