feat: enhance navigation by adding a logo image and new 'Open Source' link, and refine signature styling.

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -19,9 +19,15 @@
 
     <nav>
         <div class="nav-content">
-            <div class="logo">Shhh.it</div>
-            <a href="https://github.com/benjscohen/sound_meter/releases/download/v1.0.0/Sound.Meter-1.0.0-arm64.dmg"
-                class="btn-sm">Download</a>
+            <div class="logo">
+                <img src="./assets/favicon.png" alt="Shhh.it Logo">
+                <span>Shhh.it</span>
+            </div>
+            <div class="nav-links">
+                <a href="https://github.com/benjscohen/sound_meter" class="nav-link" target="_blank">Open Source</a>
+                <a href="https://github.com/benjscohen/sound_meter/releases/download/v1.0.0/Sound.Meter-1.0.0-arm64.dmg"
+                    class="btn-sm">Download</a>
+            </div>
         </div>
     </nav>
 
