--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -25,8 +25,8 @@
             </div>
             <div class="nav-links">
                 <a href="https://github.com/benjscohen/sound_meter" class="nav-link" target="_blank">Open Source</a>
-                <a href="https://github.com/benjscohen/sound_meter/releases/download/v1.0.0/Sound.Meter-1.0.0-arm64.dmg"
-                    class="btn-sm">Download</a>
+                <a href="https://github.com/benjscohen/sound_meter/releases/latest" class="btn-sm"
+                    id="nav-download-btn">Download</a>
             </div>
         </div>
     </nav>
@@ -38,9 +38,9 @@
                 <p class="subtitle">A beautiful, minimalist sound meter for your Mac that floats on top of your work.
                 </p>
                 <div class="cta-group">
-                    <a href="https://github.com/benjscohen/sound_meter/releases/download/v1.0.0/Sound.Meter-1.0.0-arm64.dmg"
-                        class="btn-primary" id="download-btn">Download for Mac</a>
-                    <p class="version-text">v1.0.0 • macOS 12+</p>
+                    <a href="https://github.com/benjscohen/sound_meter/releases/latest" class="btn-primary"
+                        id="download-btn">Download for Mac</a>
+                    <p class="version-text" id="version-text">Latest Version • macOS 13+</p>
                 </div>
             </div>
             <div class="hero-image">
