Add sensitivity settings

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Meter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="app-container">
         <div id="meter-circle"></div>
         <div id="controls">
             <select id="mic-select"></select>
+            <select id="sensitivity-select"></select>
         </div>
     </div>
     <script src="renderer.js"></script>
 </body>
+
 </html>
