Add download count to landing page

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -41,6 +41,8 @@
                     <a href="https://github.com/benjscohen/sound_meter/releases/latest" class="btn-primary"
                         id="download-btn">Download for Mac</a>
                     <p class="version-text" id="version-text">Latest Version • macOS 13+</p>
+                    <p class="version-text" id="download-count"
+                        style="margin-top: 4px; font-size: 0.9em; opacity: 0.8;"></p>
                 </div>
             </div>
             <div class="hero-image">
